--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </div>
     <div class="footer-contact">
       <h3>Contact Us</h3>
-      <p>Email: support@giftshop.com</p>
-      <p>Phone: (123) 456-7890</p>
+      <p>Email: sakthi0527@gmail.com</p>
+      <p>Phone: +91 7373319576</p>
     </div>
     <div class="footer-newsletter">
       <h3>Subscribe to Our Newsletter</h3>
